# virgil-pythia

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
ci/: install-cmake.sh
cmake/: TransitiveArgs.cmake
include/: go_pythia.h  pythia.h  pythia_buf.h  pythia_buf_exports.h  pythia_conf.h.in  pythia_init.h  pythia_wrapper.h
include/pythia/: pythia.h  pythia_buf.h  pythia_buf_exports.h  pythia_buf_sizes.h  pythia_conf.h.in  pythia_init.h  pythia_wrapper.h
relic/: CMakeLists.txt  relic-args.cmake  relic-targets-release.cmake
src/: CMakeLists.txt  go_pythia.c  pythia.c  pythia_buf_exports.c  pythia_buf_exports.h  pythia_buf_sizes.c  pythia_buf_sizes_c.h  pythia_c.c  pythia_c.h  pythia_init_c.h  pythia_wrapper.c
test/: CMakeLists.txt  benchmark_c.c  test.c  test_c.c  test_mt.c  test_w.c
